syntax = "proto3";

option go_package = "github.com/brendoncarroll/go-p2p/s/noiseswarm";

message AuthIntro {
    bytes public_key = 1;
    bytes sig_of_channel = 2;
}
